added input directory to trade files

--- a/tc.config
+++ b/tc.config
@@ -12,6 +12,12 @@ log_level = debug
 [excel]
 
 # Excel datemode for windows is 0, for mac is 1
-datemode = 0		
+datemode = 0
 
 
+
+[input]
+
+# the directory to look for input trade files or folder. Leave it empty
+# if in current directory.
+directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
