--- a/tc.config
+++ b/tc.config
@@ -1,11 +1,19 @@
-# The configuration file for DIF portfolio.
+# The configuration file for trade converter
 #
 
+####################################
+# config for the logging section
+####################################
 [logging]
-log_file = tc.log
+log_file=tc.log
 
-# debug, info, warning, error, critical
-log_level = debug
+# log level: debug, info, warning, error, critical
+log_level=debug
+
+# the directory to store log file, if store in current directory, leave it empty.
+# do not put "\" at the end of the directory.
+directory=
+# directory=C:\Program Files\Git\git
 
 
 
@@ -20,4 +28,6 @@ datemode = 0
 
 # the directory to look for input trade files or folder. Leave it empty
 # if in current directory.
-directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
+#directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
+directory=C:\Users\shutao\Desktop\data conversion\ListCo Equity 12307
+#directory=
