almost done, needs to update README and fix failed test case

--- a/tc.config
+++ b/tc.config
@@ -28,6 +28,6 @@ datemode = 0
 
 # the directory to look for input trade files or folder. Leave it empty
 # if in current directory.
-directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
+#directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
 #directory=C:\Users\shutao\Desktop\data conversion\ListCo Equity 12307
-#directory=
+directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Bond
