developing FT fx transaction

--- a/tc.config
+++ b/tc.config
@@ -30,4 +30,5 @@ datemode = 0
 # if in current directory.
 #directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
 #directory=C:\Users\shutao\Desktop\data conversion\ListCo Equity 12307
-directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Bond
+#directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Bond
+directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Equity
