--- a/tc.config
+++ b/tc.config
@@ -31,4 +31,5 @@ datemode = 0
 #directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity 12307
 #directory=C:\Users\shutao\Desktop\data conversion\ListCo Equity 12307
 #directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Bond
-directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Equity
+#directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Equity
+directory=C:\temp
